# claude-by-openai-api

./: .env.example  .gitignore  README.md  README_CN.md  config.py  dependencies.py  main.py  pyproject.toml  test_api.py
routers/: extras.py  openai.py
schemas/: claude.py  openai.py
services/: claude.py  openai_adapter.py
