[project]
name = "claude-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.62.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.5.0",
    "fastapi>=0.116.1",
    "requests>=2.32.4",
    "pydantic-settings>=2.10.1",
    "openai>=1.99.9",
]
